Do an AAA final task

--- a/Decorators.ipynb
+++ b/Decorators.ipynb
@@ -113,7 +113,10 @@
    "source": [
     "original_write = sys.stdout.write\n",
     "\n",
-    "def my_write(string_text):\n",
+    "def my_write(string_text: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Вывод строки с актуальной датой и временем\n",
+    "    \"\"\"\n",
     "    if string_text != '\\n':\n",
     "        time = datetime.now().strftime('[%Y-%m-%d %H:%M:%S]')\n",
     "        text_with_time = f'{time}: {string_text}'\n",
@@ -131,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-24 11:37:06]: 1, 2, 3"
+      "[2022-11-24 16:56:07]: 1, 2, 3"
      ]
     }
    ],
@@ -146,6 +149,23 @@
    "outputs": [],
    "source": [
     "sys.stdout.write = original_write"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 2, 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('1, 2, 3')"
    ]
   },
   {
@@ -175,14 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def timed_output(function):\n",
+    "def timed_output(function: Callable) -> Callable:\n",
+    "    \"\"\"\n",
+    "    Декоратор, добавляющий к печати дату и время\n",
+    "    \"\"\"\n",
     "    original_write = sys.stdout.write\n",
     "\n",
-    "    def my_write(string_text):\n",
+    "    def my_write(string_text: str) -> str:\n",
     "        if string_text != '\\n':\n",
     "            time = datetime.now().strftime('[%Y-%m-%d %H:%M:%S]')\n",
     "            text_with_time = f'{time}: {string_text}'\n",
@@ -199,25 +222,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "@timed_output\n",
-    "def print_greeting(name):\n",
+    "def print_greeting(name: str):\n",
     "    print(f'Hello, {name}!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-24 11:37:22]: Hello, Nikita!"
+      "[2022-11-24 16:56:22]: Hello, Nikita!"
      ]
     }
    ],
@@ -227,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -266,13 +289,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def redirect_output(filepath):\n",
+    "def redirect_output(filepath: str) -> Callable:\n",
+    "    \"\"\"\n",
+    "    Декоратор, перенаправляющий вывод функции в файл\n",
+    "    \"\"\"\n",
     "    original_stdout = sys.stdout\n",
-    "    def outer_wrapper(function):\n",
+    "    def outer_wrapper(function: Callable) -> Callable:\n",
     "        def inner_wrapper(*args, **kwargs):\n",
     "            with open(filepath, 'w') as file:\n",
     "                sys.stdout = file\n",
@@ -285,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,12 +325,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "calculate()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%cat` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cat function_output.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
