Do an AAA final task

--- a/Decorators.ipynb
+++ b/Decorators.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Дектораторы\n",
+    "# Декораторы\n",
     "\n",
     "В этом домашнем задании мы напишем собственные дектораторы, которые будут менять системные объекты. Но для начала мы с вами познакомимся с функцией `write`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, my friend!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sys.stdout.write('Hello, my friend!')"
    ]
@@ -48,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,27 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "output.write('123')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,10 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from datetime import datetime\n",
+    "from typing import Callable\n",
+    "\n",
     "original_write = sys.stdout.write\n",
     "\n",
     "def my_write(string_text: str) -> str:\n",
@@ -121,20 +106,22 @@
     "        time = datetime.now().strftime('[%Y-%m-%d %H:%M:%S]')\n",
     "        text_with_time = f'{time}: {string_text}'\n",
     "        original_write(text_with_time)\n",
+    "    else:\n",
+    "        original_write(string_text)\n",
     "\n",
     "sys.stdout.write = my_write"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-24 16:56:07]: 1, 2, 3"
+      "[2022-11-24 18:54:01]: 1, 2, 3\n"
      ]
     }
    ],
@@ -144,7 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,12 +209,6 @@
     "    Декоратор, добавляющий к печати дату и время\n",
     "    \"\"\"\n",
     "    original_write = sys.stdout.write\n",
-    "\n",
-    "    def my_write(string_text: str) -> str:\n",
-    "        if string_text != '\\n':\n",
-    "            time = datetime.now().strftime('[%Y-%m-%d %H:%M:%S]')\n",
-    "            text_with_time = f'{time}: {string_text}'\n",
-    "            original_write(text_with_time)\n",
     "            \n",
     "    def wrapper(*args, **kwargs):\n",
     "        sys.stdout.write = my_write\n",
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-24 16:56:22]: Hello, Nikita!"
+      "[2022-11-24 18:55:01]: Hello, Nikita!\n"
      ]
     }
    ],
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
